# niccolo

./: .gitattributes  .gitignore  LICENSES.org  Makefile.am  README  README.org  address.lisp  adr-codes.lisp  assoc-chem-haz-prec-federated-query.lisp  assoc-chem-haz.lisp  assoc-chem-prec.lisp  assoc-user-lab.lisp  authentication.lisp  building.lisp  carcinogenic-logbook.lisp  cer-codes.lisp  chemical-compound.lisp  chemical-product-tracking.lisp  chemical-product.lisp  conditions.lisp  config.lisp  config.lisp.in  configuration-utils.lisp  configure.ac  constants.lisp  db-config.lisp  db-utils.lisp  db.lisp  general-routes.lisp  ghs-haz.lisp  ghs-precautionary.lisp  hp-codes.lisp  i18n.lisp  images-utils.lisp  l-factor-snpa.lisp  l-factor.lisp  lab.lisp  laboratory.lisp  map.lisp  math-utils.lisp  (+43 more)
data/: letter-header.eps
data/adr-pictograms/: 1-1.eps  1-2.eps  1-3.eps  1-4.eps  1-5.eps  1-6.eps  5-2red.eps  5-2red_noir.eps  acide.eps  blan-red.eps  bleu4.eps  bleu4_noir.eps  jaune5-1.eps  rouge2.eps  rouge2_noir.eps  rouge3.eps  rouge3_noir.eps  skull6.eps  skull_2.eps  stripes.eps  vert.eps  vert_blanc-1.eps
data/ghs-pictograms/: acid-red.eps  aquatic-pollut-red.eps  bottle.eps  exclam.eps  explos.eps  flamme.eps  none.eps  rondflam.eps  silhouete.eps  skull.eps
data/risk/: devices.xml  devices_carc.xml  exposition_time.xml  exposition_time_carc.xml  exposition_type.xml  frasi_h.csv  h.xml  physical_state.xml  physical_state.xmls  physical_state_carc.xml  prevention_devices.xml  quantity.xml  quantity_carc.xml  r.xml  r_h_table.csv  stock.xml  usage.xml  usage_freq.xml  usage_freq_carc.xml  work.xml  working_temp_carc.xml
data/risk-snpa/: devices-collective.xml  devices.xml  exposition-time-carc.xml  exposition-time.xml  exposition-type.xml  h.xml  physical-state-carc.xml  physical-state.xml  quantity-carc.xml  quantity-stocked.xml  quantity.xml  usage-freq-carc.xml  usage-type.xml  usage.xml  working-temp-carc.xml
federated-query/: names.lisp  nodes.lisp  query-db.lisp  query-id.lisp  query-object.lisp  result-products.lisp  status-visited.lisp  status.lisp
lib/mini-cas/: mini-cas.asd  mini-cas.lisp  package.lisp
locale/: italian.lisp
script/: download-js-lib.sh  download-js-lib.sh.in  lab-encode-query.sh.in  populate-db.sql
sensors/gas/: gas.ino  http.h  mq135.h  sha256.h  utils.h
sensors/script/: gas.lisp  temp.lisp
templates/: acknowledgment.tpl  add-address.tpl  add-admin.tpl  add-adr.tpl  add-building.tpl  add-cer.tpl  add-chart-button.tpl  add-chemical-product.tpl  add-chemical.tpl  add-hazard.tpl  add-hp-waste.tpl  add-laboratory.tpl  add-map-button.tpl  add-map.tpl  add-person.tpl  add-precautionary.tpl  add-samples.tpl  add-sensor.tpl  add-storage.tpl  add-user.tpl  add-waste-physical-state.tpl  assoc-chem-haz.tpl  assoc-chem-prec.tpl  assoc-chem-security-fq.tpl  assoc-user-labs.tpl  back-button.tpl  barcode-button.tpl  broadcast-message.tpl  carcinogenic-logbook.tpl  change-password-no-cas.tpl  change-password.tpl  chart-button-1x.tpl  chart-button.tpl  chemicals-tracking.tpl  classification-tree.tpl  confirm.tpl  delete-button.tpl  download-button.tpl  edit-button.tpl  expiration-messages.tpl  (+52 more)
(+29 files in other folders)
